# mouse-click

./: CMakeLists.txt  ConfigParse.cpp  ConfigParse.h  README.md  ini.c  main.cpp  resource.h  resource.rc
原始打包文件/: conf.ini
